src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account type</label>
        <referenceTo>Account_Type_Code__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_preferences__c</fullName>
        <label>Address preferences</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_AGE_18_PLUS__c</fullName>
        <label>Is 18 plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_AGE_19_PLUS__c</fullName>
        <label>Is 19 plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_AGE_21_PLUS__c</fullName>
        <label>Is 21 plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Event_Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project Event Announcement</label>
        <referenceTo>Campaign_Project_Event__c</referenceTo>
        <relationshipLabel>Event Contact</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Studio_Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project Studio Scope</label>
        <referenceTo>Campaign_Project_Studio__c</referenceTo>
        <relationshipLabel>MediaLocate Contact</relationshipLabel>
        <relationshipName>MediaLocate_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalId>true</externalId>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dominant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dominant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dominant_mailing_city__c</fullName>
        <formula>Account.Dominant__r.MailingCity</formula>
        <label>Dominant mailing city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dominant_mailing_country__c</fullName>
        <formula>Account.Dominant__r.MailingCountry</formula>
        <label>Dominant mailing country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dominant_mailing_postal_code__c</fullName>
        <formula>Account.Dominant__r.MailingPostalCode</formula>
        <label>Dominant mailing postal code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dominant_mailing_state__c</fullName>
        <formula>Account.Dominant__r.MailingState</formula>
        <label>Dominant mailing state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dominant_mailing_street__c</fullName>
        <formula>Account.Dominant__r.MailingStreet</formula>
        <label>Dominant mailing street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dominant_property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dominant property</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Dominant property)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dominant_property_name__c</fullName>
        <formula>Dominant_property__r.Name</formula>
        <label>Dominant property name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home property</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_property_name__c</fullName>
        <formula>Home_property__r.Name</formula>
        <label>Home property name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_code_name__c</fullName>
        <formula>c_tier_cd__r.Name</formula>
        <label>Tier code name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCPId__c</fullName>
        <formula>Account.UCPId__c</formula>
        <label>UCPId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_bed_type__c</fullName>
        <label>Bed type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_email_address_quality_cd__c</fullName>
        <label>Email Quality Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_email_address_valid_cd__c</fullName>
        <label>Email Valid Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_type__c</fullName>
        <label>Game type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gender__c</fullName>
        <label>Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_1__c</fullName>
        <label>Game group 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_2__c</fullName>
        <label>Game group 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_group_3__c</fullName>
        <label>Game group 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_marital_status__c</fullName>
        <label>Marital status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_middle_init__c</fullName>
        <label>Middle init</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ofr_freq__c</fullName>
        <label>Email offer frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_phonetic_first__c</fullName>
        <label>Phonetic First</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_phonetic_last__c</fullName>
        <label>Phonetic Last</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prev_dom_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous dominant code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (c_prev_dom_cd)</relationshipLabel>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prev_tier_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Tier Code</label>
        <referenceTo>Tier_Code__c</referenceTo>
        <relationshipLabel>Contacts (Previous Tier Code)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prop_mail_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prop mail code</label>
        <referenceTo>Mail_Code_Standard__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_type__c</fullName>
        <label>Room type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_sec_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary property</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (c_sec_cd)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_smoking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smoking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c_suffix__c</fullName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tdc_supp_flag__c</fullName>
        <label>TDC supp flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tier_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tier Code</label>
        <referenceTo>Tier_Code__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_uci_supp_flag__c</fullName>
        <label>UCI supp flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ucl_supp_flag__c</fullName>
        <label>UCL supp flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_acct_type_as_of__c</fullName>
        <label>Account type as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_as_of__c</fullName>
        <label>As of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_tier_assign_dt__c</fullName>
        <label>Tier assignment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_balance__c</fullName>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mail_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>winet_Id__c</fullName>
        <externalId>true</externalId>
        <label>winet Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>winet_Id__c</columns>
        <columns>UCPId__c</columns>
        <columns>Account_type__c</columns>
        <columns>Dominant_property__c</columns>
        <columns>Home_property__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>mail_flag__c</columns>
        <columns>Address_preferences__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Ben_Test</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <filterScope>Mine</filterScope>
        <label>Ben Test</label>
    </listViews>
    <listViews>
        <fullName>John_Doe</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>equals</operation>
            <value>John</value>
        </filters>
        <label>John Doe</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Test</value>
        </filters>
        <label>Test</label>
    </listViews>
    <listViews>
        <fullName>UBC</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>c_title__c</columns>
        <columns>c_uci_supp_flag__c</columns>
        <columns>c_ucl_supp_flag__c</columns>
        <columns>d_acct_type_as_of__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>UCPId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Home_property__c</field>
            <operation>equals</operation>
            <value>UBC</value>
        </filters>
        <label>UBC</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>